# suna

./: .dockerignore  .editorconfig  .env.example  .env.local  .env.railway.example  .env.railway.test  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .npmrc  .semgrepignore  .trivyignore  AGENTS.md  API_KEYS_SETUP.md  ARCHITECTURE.md  CLAUDE.md  COGNITO_AUTH_SETUP.md  COMMS.md  CONTRIBUTING.md  DEPLOYMENT-SUMMARY.md  FRONTEND_TOOL_CALLING_COMPATIBILITY.md  GET_MESSAGES_FLOW.md  IMPLEMENTATION_SUMMARY.md  KUSOR_STATUS.md  LEGACY_REVENUECAT_FIX_SPEC.md  LICENSE  MANIFESTO.md  MESSAGE_SCHEMA_AND_API.md  Makefile  NETWORK_TROUBLESHOOTING.md  PODCAST_INTEGRATION_STATUS.md  PR_REVIEW_CHECKLIST.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  RAILWAY_QUICKSTART.md  README.md  README_ADENTIC.md  REBRANDING_PLAN.md  (+47 more)
.deepsec/: .gitignore  .npmrc  README.md  deepsec.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.kortix/: CONTEXT.md  Dockerfile  MEMORY.md  USER.md  triggers.yaml
Expo/: README.md  app.json  package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
azure-deployment/: README.md  TROUBLESHOOTING.md  azure-resources.bicep  deploy.sh  parameters.json  setup-env.sh  validate-env.sh  worker-config.yaml
backend/: .env.example  Dockerfile  README.md  (+22 more)
(+8393 files in other folders)
