[package]
name = "kortix-desktop"
version = "0.1.0"
description = "Kortix Desktop"
authors = ["Kortix"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "kortix_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.6"

[dependencies.time]
version = "=0.3.41"
[dependencies.serde_with]
version = "=3.14.1"
[dependencies.plist]
version = "=1.7.4"
[dependencies.darling]
version = "=0.21.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
